# theory

./: .coverage  .env.example  .gitignore  CONTRIBUTING.md  CREDITS.md  DISCLAIMER.md  LEGAL.md  README.md  SECURITY.md  env.example  pyproject.toml  requirements-dev.txt  requirements.txt  schema.py  theory.py
.cache/intel_synthesis/: 03ea91d806a3c4f7.json  0624ce9ae7b43c4b.json  17b3e4423cf4e96a.json  26969be7b7e3a47f.json  2d5372595f84b53b.json  2f838e5cab78ca6b.json  45c37addec8985e9.json  8d055d95fbe4c534.json  a19012637dfdceae.json  bd310a1a05a209eb.json  e43353e251db4009.json
.cache/malpedia/: actor_apt28.json  actor_lazarus_group.json  family_aix.fastcash.json  family_apk.badcall.json  family_apk.hardrain.json  family_apk.popr-d30.json  family_elf.spectral_blur.json  family_elf.xagent.json  family_ios.xagent.json  family_js.quickcafe.json  family_js.spypress.json  family_osx.3cx_backdoor.json  family_osx.applejeus.json  family_osx.casso.json  family_osx.dacls.json  family_osx.hloader.json  family_osx.interception.json  family_osx.komplex.json  family_osx.rustbucket.json  family_osx.spectral_blur.json  family_osx.unidentified_001.json  family_osx.watchcat.json  family_osx.xagent.json  (+39 more)
collectors/: alienvault_otx.py  base.py  circl_misp.py  cisa_advisories.py  intelligence_synthesizer.py  malpedia.py  mitre_attack.py  nvd.py  sigma_rules.py  threatfox.py  vendor_intel.py
config/: actors.yaml  detection_repos.yaml  feeds.yaml  sources.yaml.example
docs/: SCHEDULED_UPDATES.md  SIGMA_RATE_LIMITS.md
mappers/: __init__.py  cisa.py  mitre.py
output/: theory_demo_output.txt
processors/: deduplicator.py  normalizer.py
reporters/: csv_reporter.py  dossier.py  html_reporter.py  json_reporter.py  playbook_reporter.py  stix_reporter.py
tests/: test_cisa_mapper.py  test_deduplicator.py  test_dossier_reporter.py  test_mitre_mapper.py  test_normalizer.py  test_phase4_mappers.py  test_phase9_vendor_intel.py  test_sigma_collector.py  test_stix_reporter.py  test_threatfox_collector.py
theory/: _cli.py  _version.py
(+360 files in other folders)
