[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "theory-ti"
version = "1.0.0"
description = "Multi-source threat actor intelligence framework"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Threatcraft", email = "hello@threatcraft.co" }
]
keywords = [
    "threat-intelligence", "mitre-attack", "cybersecurity",
    "osint", "stix", "sigma", "threat-hunting", "apt"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.11"
dependencies = [
    "rich>=13.0",
    "requests>=2.31",
    "python-dotenv>=1.0",
    "stix2>=3.0",
    "pyyaml>=6.0",
    "feedparser>=6.0",
    "python-dateutil>=2.8",
    "jinja2>=3.1",
    "click>=8.1",
    "shodan>=1.28",
    "censys>=2.2",
    "watchdog>=3.0",
    "schedule>=1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[project.scripts]
theory = "theory:main"

[project.urls]
Homepage = "https://github.com/threatcraft-co/theory"
Repository = "https://github.com/threatcraft-co/theory"
"Bug Tracker" = "https://github.com/threatcraft-co/theory/issues"

[tool.setuptools.packages.find]
where = ["."]
include = [
    "theory*",
    "collectors*",
    "mappers*",
    "processors*",
    "reporters*",
]

[tool.setuptools.package-data]
"*" = ["config/*.yaml"]

[tool.ruff]
line-length = 120
ignore = ["E501", "E402", "W291", "W292", "W293", "E701", "E702", "F401", "F541", "F841"]
